--- a/static/package.json
+++ b/static/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "Static Drupalcamp 2018",
+  "name": "static-drupalcamp-cebu-2018",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Luukyb/drupalcampcebu2018.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Luukyb/drupalcampcebu2018/issues"
   },
   "homepage": "https://github.com/Luukyb/drupalcampcebu2018#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sass-globbing": "0.0.2"
-  }
+  "description": ""
 }
