--- a/static/package.json
+++ b/static/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "gulpfile.js",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
